# NaiveC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: generator.cpp  generator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
tests/: Palindrome.c  calculator.c  kmp.c  palindrome.c
